--- a/UASignerWpfApp/Properties/Resources.resx
+++ b/UASignerWpfApp/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="cblistitem_directory" xml:space="preserve">
+    <value>Directory</value>
+  </data>
   <data name="err_conf_0" xml:space="preserve">
     <value>This alias ('{0}') is already taken!</value>
   </data>
